--- a/css/style.css
+++ b/css/style.css
@@ -48,18 +48,18 @@ p{
     margin: 10px 0;
 }
 #navbar{
-    background: #333;
+    /* background: #333; */
     color: #fff;
     overflow: auto;
 }
 #navbar a{
     color: #fff;
 }
-#navbar h1{
+#mainpage #navbar h1{
     float: left;
-    font-size: 35px;
+    font-size: 40px;
     font-family: Arial, Helvetica, sans-serif;
-    padding-top: 20px;
+    margin-top: 22px;
 }
 #navbar h1 a:hover{
     color: #f7c08a;
@@ -73,12 +73,16 @@ p{
 }
 #navbar li a{
     display: block;
-    padding: 20px;
+    margin-top: 22px;
+    margin-left: 15px;
+    margin-right: 15px;
+    padding: 10px 20px;
     text-align: center;
 }
 #navbar li a:hover, 
 #navbar li a.current{
-    background: #444;
+    /* background: #444; */
+    border: solid white 1px;
     color: #f7c08a;
 }
 /* Main Page */
