--- a/css/style.css
+++ b/css/style.css
@@ -81,6 +81,7 @@ p{
 }
 #navbar li a:hover, 
 #navbar li a.current{
+    /* new background */
     /* background: #444; */
     border: solid white 1px;
     color: #f7c08a;
