--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,12 @@
 .mainparagraph{
     font-size: 22px;
 }
+.mainfooter{
+    text-align: center;
+    background: #444;
+    color: #fff;
+    padding: 20px;
+}
 .button{
     display: inline-block;
     font-size: 18px;
@@ -26,11 +32,23 @@
     font-family: sans-serif;
     font-weight: bold;
 }
-.button:hover{
+.btn{
+    display: inline-block;
+    font-size: 18px;
+    color: white;
     background: #333;
+    padding: 10px 18px;
+    border: solid white 1px;
+    border-radius: 6px;
+    cursor: pointer;
+    font-family: sans-serif;
+    font-weight: bold;
+}
+.btn:hover{
+    /* background: #333; */
     color: #f7c08a;
-    border: solid #f7c08a 1px;
-    border-radius: 3px;
+    /* border: solid white 1px; */
+    border-radius: 6px;
 }
 /* Main Styling */
 body{
@@ -48,18 +66,21 @@ p{
     margin: 10px 0;
 }
 #navbar{
-    /* background: #333; */
+    background: rgb(41, 40, 40);
     color: #fff;
     overflow: auto;
+    padding-bottom: 15px;
+    
 }
 #navbar a{
     color: #fff;
 }
-#mainpage #navbar h1{
+#navbar h1{
     float: left;
     font-size: 40px;
     font-family: Arial, Helvetica, sans-serif;
-    margin-top: 22px;
+    margin-top: 30px;
+    /* position: fixed; */
 }
 #aboutpage #navbar h1{
     float: left;
@@ -72,7 +93,10 @@ p{
 }
 #navbar ul{
     list-style: none;
+    /* position: fixed; */
+    left: 60%;
     float: right;
+    
 }
 #navbar li{
     float: left;
@@ -92,6 +116,7 @@ p{
     border: solid white 1px;
     color: #f7c08a;
 }
+
 /* Main Page */
 #mainpage{
     background: url(../img/background3.jpg) no-repeat
@@ -112,6 +137,7 @@ p{
     padding-bottom: 20px;
     line-height: 1.5em;
 }
+
 /*About Page CSS*/
 #aboutpage{
     background: url(../img/background2.jpg) no-repeat
@@ -121,6 +147,13 @@ p{
     color: #fff;
     text-align: center;
     padding-top: 100px;
+}
+#aboutpage #navbar h1{
+    float: left;
+    font-size: 40px;
+    font-family: Arial, Helvetica, sans-serif;
+    margin-top: 30px;
+    position: fixed;
 }
 #aboutpage h3{
     font-size: 50px;
@@ -166,3 +199,38 @@ p{
     width: 200px;
     height: 200px;
   }
+
+/* Contacts PAGE */
+/* #contactpage{
+    background: black no-repeat
+    center;
+}
+#contactpage .contactpage-content{
+    color: #fff;
+    text-align: center;
+    padding-top: 100px;
+} */
+#contactform .form-group{
+    margin-bottom: 20px;
+}
+#contactform label{
+    display: block;
+    margin-bottom: 5px;
+}
+#contactform h1{
+    margin-bottom: 0px;
+    line-height: 1.5em;
+    font-size: 37px;
+}
+#contactform p{
+    margin-bottom: 30px;
+    line-height: 0em;
+}
+#contactform input, #contactform textarea{
+    width: 70%;
+    padding: 10px;
+    border: 1px #ddd solid;
+}
+#contactform textarea{
+    height: 200px;
+}
