--- a/css/style.css
+++ b/css/style.css
@@ -48,37 +48,50 @@ p{
     margin: 10px 0;
 }
 #navbar{
-    background: #333;
+    /* background: #333; */
+    color: #fff;
+    overflow: auto;
+}
+#navbarContact{
+    background: #333333;
     color: #fff;
     overflow: auto;
 }
 #navbar a{
     color: #fff;
 }
-#mainpage #navbar h1{
+#mainpage #navbar h1, #aboutpage #navbarContact h1{
     float: left;
+    color: #fff;
     font-size: 40px;
     font-family: Arial, Helvetica, sans-serif;
-    margin-top: 22px;
+    margin-top: 16.5px;
 }
-#aboutpage #navbar h1{
+#aboutpage #navbar h1,#aboutpage #navbarContact h1{
     float: left;
     font-size: 40px;
+    
     font-family: Arial, Helvetica, sans-serif;
     margin-top: 27px;
 }
-#navbar h1 a:hover{
+.logo a{
+    color: #fff;
+}
+#navbar h1 a:hover, #navbarContact h1 a:hover{
     color: #f7c08a;
 }
-#navbar ul{
+#navbar ul, #navbarContact ul{
     list-style: none;
     float: right;
+    color: #fff;
 }
-#navbar li{
+#navbar li, #navbarContact li{
     float: left;
+    color: #fff;
 }
-#navbar li a{
+#navbar li a, #navbarContact li a{
     display: block;
+    color: #fff;
     margin-top: 15px;
     margin-left: 15px;
     margin-right: 15px;
@@ -87,7 +100,9 @@ p{
     text-align: center;
 }
 #navbar li a:hover, 
-#navbar li a.current{
+#navbar li a.current,
+#navbarContact li a:hover,
+#navbarContact li a.current{
     /* new background */
     /* background: #444; */
     border: solid white 1px;
@@ -200,6 +215,34 @@ p{
 }
 #contactform textarea{
     height: 200px;
+}
+#submit{
+    display: inline-block;
+    font-size: 18px;
+    color: #fff;
+    background: #333;
+    padding: 10px 18px;
+    border: solid white 1px;
+    border-radius: 3px;
+    cursor: pointer;
+    font-family: sans-serif;
+    font-weight: bold;
+}
+#submit:hover{
+    background: #333;
+    color: #f7c08a;
+    /* border: solid #f7c08a 1px;
+    border-radius: 3px; */
+}
+.mainfooter{
+    background: #333;
+    color: #fff;
+    overflow: auto;
+    padding: 17px;
+}
+
+.mainfooter #copyright{
+    text-align: center;
 }
 /*Services Page CSS*/
 #servicespage{
